shit just got real

--- a/css/style.css
+++ b/css/style.css
@@ -1,117 +1,58 @@
-﻿/* --------------------------------- global reset --------------------------------- */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+﻿html,
+body
+{
 	margin: 0;
 	padding: 0;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-input, textarea, select, button, a {
-	outline:none;
-}
-img {
-    vertical-align: middle;
-}
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-textarea {
-    resize: vertical;
 }
 
+#field
+{
+    position: relative;
 
-/* --------------------------------- pages styling --------------------------------- */
+    margin: 20px auto;
+    border: 1px solid #ccc;
 
-#field {
-	width: 400px;
-	height: 400px;
-	border: 1px solid #ccc;
-	position: relative;
-	margin: 20px auto;
-	background: #eee;
+    background: #eee;
 	overflow: hidden;
 }
 
-.dot, #snake {
-	width: 8px;
-	height: 8px;
-	border: none;
-	background: #000;
+#food,
+.cell
+{
+	width: 19px;
+	height: 19px;
+
 	position: absolute;
+
+    background: #000;
+    border-left: 1px solid #eee;
+    border-top: 1px solid #eee;
 }
 
-#snake {
-	top: 50%;
-	left: 50%;
+#ui
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    background: #fff;
+    text-align: center;
 }
 
-.tail {
-	display: block;
-	width: 8px;
-	height: 8px;
-	border: none;
-	background: #333;
-	position: absolute;
-	top: 0;
-	left: 0;
+#ui.hidden
+{
+    display: none;
 }
 
-.tail {
-	display: none;
-}
-
-#score {
+#score
+{
 	clear: both;
 	font-size: 30px;
 	color:#000;
 	text-align: center;
 	margin: 20px 0 0;
 }
-
-
-
-
-
-
-
-/* --------------------------------- fonts --------------------------------- */
-
-body { font-size:62.5%; }					/* 1em == 10px */
